fix z-index

--- a/web-default/scss/theme.scss
+++ b/web-default/scss/theme.scss
@@ -917,7 +917,7 @@ blockquote {
 }
 
 .reservation-box, .language-box {
-    z-index: 960;
+    z-index: 1000;
     top: 80px;
     height: 65px;
     cursor: pointer;
